welcome.lessons.welcome.methods.slug.SlugTracking.scala.code
def isFacingTrail():Boolean = 
{
	if(estFaceMur())
		return false
	recule()
	if(getGroundColor == Color.green)
		var boolean vert = true
	avance()
	return vert
}        
